--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ argon2-cffi = "^23.1.0"
 flask-wtf = "^1.2.1"
 python-dotenv = "^1.0.0"
 sqlmodel = "^0.0.8"
-psycopg2-binary = "^2.9.9"
+psycopg2 = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["d"], version = "^23.9.1"}
