--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,15 @@ readme = "README.md"
 python = "^3.10"
 Flask = "^3.0.0"
 passlib = "^1.7.4"
-argon2-cffi = "^23.1.0"
 flask-wtf = "^1.2.1"
 python-dotenv = "^1.0.0"
-sqlmodel = "^0.0.8"
 psycopg2 = "^2.9.9"
+email-validator = "^2.0.0.post2"
+gunicorn = "^21.2.0"
+flask-security = "^3.0.0"
+sqlalchemy = "^2.0.22"
+flask-sqlalchemy = "^3.1.1"
+flask-migrate = "^4.0.5"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["d"], version = "^23.9.1"}
