--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ sqlalchemy = "^2.0.22"
 flask-sqlalchemy = "^3.1.1"
 flask-migrate = "^4.0.5"
 icecream = "^2.1.3"
+flask-reuploaded = "^1.4.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["d"], version = "^23.9.1"}
