--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ flask-migrate = "^4.0.5"
 icecream = "^2.1.3"
 flask-reuploaded = "^1.4.0"
 
-[tool.poetry.group.dev.dependencies]
-black = {extras = ["d"], version = "^23.9.1"}
+#[tool.poetry.group.dev.dependencies]
+#black = {extras = ["d"], version = "^23.9.1"}
 
 [build-system]
 requires = ["poetry-core"]
