--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Szymon Kwiecinski"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.8"
 Flask = "^3.0.0"
 passlib = "^1.7.4"
 flask-wtf = "^1.2.1"
@@ -19,7 +19,7 @@ sqlalchemy = "^2.0.22"
 flask-sqlalchemy = "^3.1.1"
 flask-migrate = "^4.0.5"
 icecream = "^2.1.3"
-flask-reuploaded = "^1.4.0"
+flask-reuploaded = ""
 
 [build-system]
 requires = ["poetry-core"]
